Pygments changelog
==================

Pull request numbers before 2.4.2 are not linked as they refer to the now defunct Bitbucket project.

Version 2.12.0
--------------
(not released yet)

Version 2.11.2
--------------
(released January 6th, 2022)

- Updated lexers:

  * C-family: Fix incorrect handling of labels (#2022, #1996, #1182)
  * Java: Fixed an issue with ``record`` keywords result in ``Error`` tokens in some cases (#2018)

- Fix links to line numbers not working correctly (#2014)
- Remove ``underline`` from ``Whitespace`` style in the ``Tango`` theme (#2020)
- Fix ``IRC`` and ``Terminal256`` formatters not backtracking correctly for custom token types, resulting in some unstyled tokens (#1986)

Version 2.11.1
--------------
(released December 31st, 2021)

- Updated lexers:

  * C-family: Handle return types with multiple tokens (e.g. ``unsigned int``) (#2008)
  * JSON: Fix a regression which caused whitespace before ``:`` to result in ``Error`` tokens (#2010)
  * SPICE: Various improvements (#2009)

Version 2.11.0
--------------
(released December 30th, 2021)

- Added lexers:

  * BDD (#1803)
  * Elpi (#1894)
  * LilyPond (#1845, #1968, #1971, #2001). This comes with a custom style as well.
  * Maxima (#1885)
  * Rita (#1541, #2003)
  * Savi (#1863)
  * Sed (#1935)
  * Sophia contracts (#1974)
  * Spice (#1980)
  * ``.SRCINFO`` (#1951)

- Updated lexers:

  * ABNF: Allow one-character rules (#1804)
  * Assembly: Fix incorrect token endings (#1895, #1961)
  * Bibtex: Distinguish between ``comment`` and ``commentary`` (#1899, #1806)
  * C family: Support unicode identifiers (#1848)
  * CDDL: Fix slow lexing speed (#1959)
  * Debian control: Add missing fields (#1946)
  * Devicetree: Recognize hexadecimal addresses for nodes (#1949)
  * GDScript: Add ``void`` data type (#1948)
  * GSQL

    - Fix comment handling (#2002)
    - Fix catastrophic backtracking (#2006)

  * HTML, XML: Improve comment handling (#1896)